...
    <LinearLayout
        android:id="@+id/layout_search_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/event_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:scrollbars="vertical"
            android:scrollingCache="true"
            tools:listitem="@layout/item_row_match" />
...
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_search_not_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:gravity="center"
        android:orientation="vertical"
...
