<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/search_match_option"
        android:title="@string/search_match" />
    <item
        android:id="@+id/search_team_option"
        android:title="@string/search_team" />
</menu>